[project]
name = "pgai"
version = "0.1.0"
description = "Post Generator Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.6",
    "lxml>=6.0.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "trafilatura>=1.6.1",
]
